# nepali_tokenizer

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  gold.jsonl  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: compounds.json  sandhi.json  verbs.json
nepali_tokenizer.egg-info/: PKG-INFO  SOURCES.txt
scripts/: bench.py  evaluate.py
