[project]
name = "nepali_tokenizer"
version = "0.1.0"
description = "Deterministic, rule-based Nepali grammar tokenizer"
authors = [{name = "Your Name"}]
requires-python = ">=3.9"
readme = "README.md"

[project.scripts]
nepali-tokenize = "nepali_tokenizer.cli:main"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
testpaths = ["tests"]
